[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.17.0"
hex-literal = "0.3.4"
hex = "0.3.1"
tokio = "1.22.0"
env_logger = "0.10.0"
thiserror = "1.0"
lfb-back = {git = "https://github.com/lafinebouche/lfb-back.git", branch="master"}
serde = "1.0"
dotenv = "0.15.0"
